--- a/_config.yml
+++ b/_config.yml
@@ -5,34 +5,32 @@
 # Replace the baseurl with the name of this repository. For example, if the repository is named
 # "my-site-repository", then update the baseurl like so:
 # baseurl: "/my-site-repository"
-baseurl: "/open-sdg-site-starter"
+baseurl: "/sdg-site-tajikistan2"
 # The next line should be the URL of your data repository published site. To find this,
 # go to your data repository in Github, and click "Settings", then scroll down to the
 # "Github Pages" section. Copy/paste the link in the green section.
-remote_data_prefix: "https://open-sdg.org/open-sdg-data-starter"
+remote_data_prefix: "https://tajstat.github.io/sdg-data-tajikistan2/"
 # In the next few items, replace "open-sdg" with the name of your GitHub
 # organization, and "open-sdg-data-starter" with the name of your data repository.
 # URL for the "Edit Data" button on indicators.
-data_edit_url: http://prose.io/#open-sdg/open-sdg-data-starter/edit/develop/data/indicator_[id].csv
+data_edit_url: http://prose.io/#tajstat/sdg-site-tajikistan2/edit/develop/data/indicator_[id].csv
 # URL for the "Edit Metadata" button on indicators.
-metadata_edit_url: http://prose.io/#open-sdg/open-sdg-data-starter/edit/develop/meta/[id].md
+metadata_edit_url: http://prose.io/#tajstat/sdg-site-tajikistan2/edit/develop/meta/[id].md
 #
 # The list of languages that are translated. The first one is the default.
 languages:
   - en
-  - es
-#
+  - ru
+
+# 
 # That's enough for the Quick Start! The remaining settings can be configured later.
 
 # Tell the Remote Theme plugin to use the Open SDG platform (Jekyll theme).
-# Recommended: set this to a particular "release" of Open SDG. For example:
-#remote_theme: open-sdg/open-sdg@1.1.0
-remote_theme: open-sdg/open-sdg@master
+remote_theme: open-sdg/open-sdg@1.3.1
 
 # Replace this title as needed.
-title: Indicators For The Sustainable Development Goals
+title: general.site_title
 url: ""
-data_dir: data
 environment: staging
 
 # Automatically create indicator pages, goal pages,
@@ -176,3 +174,49 @@ exclude:
 #    max_zoom: 10
 #    subfolder: my-geojson-subfolder
 #    label: My map layer label (can be a translation key)
+
+# Recommend accessibility improvements.
+accessible_tabs: true
+accessible_charts: true
+graph_color_set: accessible
+
+# Specify any custom javascript files.
+custom_js:
+  - /assets/js/custom.js
+
+# Specify the format of the language toggles. Choices are:
+# "dropdown", "links", or "none"
+header_language_toggle: dropdown
+footer_language_toggle: none
+
+# Configure the header style.
+header:
+  include: header-menu-left-aligned.html
+
+# Specify whether the Series disaggregation should be a toggle (like units).
+series_toggle: true
+
+# Control the behavior of breadcrumbs for certain types of content.
+breadcrumbs:
+  post:
+    - label: general.home
+      path: /
+    - label: menu.updates
+      path: /news
+  goal:
+    - label: general.home
+      path: /
+    - label: general.goals
+      path: /goals
+  indicator:
+    - label: general.home
+      path: /
+    - label: general.goals
+      path: /goals
+
+# Specify the style of header to use.
+header:
+  include: header-menu-left-aligned.html
+
+# Use an accessible color-set for charts.
+graph_color_set: accessible
